--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,7 @@
 GOOGLE_API_KEY=your_google_custom_search_api_key_here
 GOOGLE_CSE_ID=your_custom_search_engine_id_here
 # OPENAI_API_KEY=your_openai_api_key_here  # For future AI processing stage
+
+# Optional: OpenAI Model
+OPENAI_MODEL_NANO=gpt-5-nano-2025-08-07
+OPENAI_MODEL_MINI=gpt-5-mini-2025-08-07
