UNVERIFIED Project Restructuring

--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,4 @@ GOOGLE_CSE_ID=your_custom_search_engine_id_here
 # Optional: OpenAI Model
 OPENAI_MODEL_NANO=gpt-5-nano-2025-08-07
 OPENAI_MODEL_MINI=gpt-5-mini-2025-08-07
+LINKUP_API_KEY=your_linkup_key
